--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -29,10 +29,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
+          {% if current_user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          {% else %}
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signup" href="/sign-up">Sign Up</a>
+          {% endif %}
         </div>
       </div>
     </nav>
@@ -77,9 +80,17 @@
       crossorigin="anonymous"
     ></script>
 
-    <script>
-        type="text/javascript"
-        src="{{ url_for('static', filename='index.js') }}"
-    </script>
+  {% block javascript %}
+      <script type="text/javascript">
+        function deleteNote(noteId) {
+    fetch("/delete-note", {
+      method: "POST",
+      body: JSON.stringify({ noteId: noteId }),
+    }).then((_res) => {
+      window.location.href = "/";
+    });
+    }
+  </script>
+  {% endblock %}
 </body>
 </html>
